--- a/client/src/App.css
+++ b/client/src/App.css
@@ -105,7 +105,7 @@
 }
 
 .text-primary {
-  color: #1797af;
+  color: #3d4cc2;
 }
 
 .round-img {
@@ -119,7 +119,7 @@
 }
 
 .bg-primary {
-  background-color: #1797af;
+  background-color: #3d4cc2;
   color: #fff;
 }
 
@@ -162,15 +162,16 @@
   outline: none;
   -webkit-transition: all 0.2s ease-in;
   transition: all 0.2s ease-in;
+  border-radius: 50px;
 }
 
 .btn.btn-primary {
-  background-color: #1797af;
+  background-color: #3d4cc2;
   color: #fff;
 }
 
 .btn.btn-primary:hover {
-  background: #45cde7;
+  background: #4583e7;
 }
 
 .btn.btn-dark {
@@ -215,7 +216,7 @@
 }
 
 .badge.badge-primary {
-  background-color: #1797af;
+  background-color: #3d4cc2;
   color: #fff;
 }
 
@@ -250,7 +251,8 @@
 }
 
 .table th {
-  background-color: #f4f4f4;
+  background-color: #a8a5ca;
+  font-size: 18px;
 }
 
 .alert {
@@ -263,7 +265,7 @@
 }
 
 .alert.alert-primary {
-  background-color: #1797af;
+  background-color: #3d4cc2;
   color: #fff;
 }
 
@@ -357,7 +359,8 @@ body {
 
 a {
   text-decoration: none;
-  color: #1797af;
+  color: #3d4cc2;
+  font-weight: bold;
 }
 
 ul {
@@ -383,7 +386,7 @@ img {
   z-index: 1;
   width: 100%;
   top: 0;
-  border-bottom: solid 1px #1797af;
+  border-bottom: solid 1px #3d4cc2;
   opacity: 0.9;
 }
 
@@ -400,7 +403,7 @@ img {
 }
 
 .navbar a:hover {
-  color: #1797af;
+  color: #3d4cc2;
 }
 
 .landing {
