--- a/client/src/App.css
+++ b/client/src/App.css
@@ -252,7 +252,7 @@
 
 .table th {
   background-color: #a8a5ca;
-  font-size: 18px;
+  font-size: 12px;
 }
 
 .alert {
@@ -294,10 +294,10 @@
   color: #888;
 }
 
-.form input[type='text'],
-.form input[type='email'],
-.form input[type='password'],
-.form input[type='date'],
+.form input[type="text"],
+.form input[type="email"],
+.form input[type="password"],
+.form input[type="date"],
 .form select,
 .form textarea {
   display: block;
@@ -307,7 +307,7 @@
   border: solid 1px #888;
 }
 
-.form input[type='submit'] {
+.form input[type="submit"] {
   font: inherit;
 }
 
@@ -350,7 +350,7 @@
 }
 
 body {
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-size: 1rem;
   line-height: 1.6;
   background-color: white;
@@ -408,7 +408,7 @@ img {
 
 .landing {
   position: relative;
-  background-image: url('../src/img/showcase.jpg') no-repeat center center/cover;
+  background-image: url("../src/img/showcase.jpg") no-repeat center center/cover;
   height: 100vh;
   background: grey;
 }
@@ -451,7 +451,7 @@ img {
 .profile-grid {
   display: -ms-grid;
   display: grid;
-  grid-template-areas: 'top top' 'about about' 'exp edu' 'github github';
+  grid-template-areas: "top top" "about about" "exp edu" "github github";
   grid-gap: 1rem;
 }
 
@@ -592,10 +592,6 @@ img {
 }
 
 @media (max-width: 700px) {
-  .hide-sm {
-    display: none;
-  }
-
   .container {
     margin-top: 8rem;
   }
@@ -645,11 +641,11 @@ img {
 
   .profile-grid {
     grid-template-areas:
-      'top'
-      'about'
-      'exp'
-      'edu'
-      'github';
+      "top"
+      "about"
+      "exp"
+      "edu"
+      "github";
   }
 
   .profile-about .skills {
